Grid fix so all column's heights can be stretched

--- a/stylus/1--settings/_s-grid.styl
+++ b/stylus/1--settings/_s-grid.styl
@@ -19,6 +19,7 @@
     flex 1
     max-width 1
     padding 0 ($column-gap / 2)
+    min-height 100%
 
 for size in (1..12)
     .small-{size}
